--- a/Finance/trading-signals/package.json
+++ b/Finance/trading-signals/package.json
@@ -2,6 +2,7 @@
   "name": "trading-signals",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sergeykozachenko.github.io/ML/Finance/trading-signals/build",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
